@@ -5,7 +5,8 @@ import(graphics)
 importFrom(grDevices, as.graphicsAnnot, dev.cur, dev.flush, dev.hold,
            dev.interactive, dev.new, dev.set, devAskNewPage,
            extendrange, n2mfrow, palette, xy.coords)
-importFrom(utils, count.fields, flush.console, str, tail)
+importFrom('utils',
+           count.fields, flush.console, modifyList, str, tail)
 
 export(.checkMFClasses, .getXlevels, .MFclass, .nknots.smspl,
        acf, acf2AR, add.scope,
